--- a/main.html
+++ b/main.html
@@ -5,27 +5,59 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<!-- link folder -->
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+			crossorigin="anonymous"
+		/>
 		<link rel="stylesheet" href="./css/style.css" />
+
 		<title>Practice</title>
 	</head>
 	<body>
-		<h1>h1 header</h1>
-		<header class="header">header semantic</header>
-		<p>paragraph semantic</p>
-		<p>
-			Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
-			voluptate pariatur itaque cum rerum necessitatibus voluptas dicta
-			eos voluptatibus, quae reiciendis cumque consequuntur. Corporis
-			atque sequi minima vel a velit.
-		</p>
-		<section>
-			<div>a div</div>
-			<div>Another div</div>
-		</section>
-		<footer>
-			<p>footer paragraph</p>
-			<p>another paragraph</p>
-		</footer>
-		<a href="./something.html">A link to something</a>
+		<div class="container">
+			<div class="row">
+				<nav>
+					<!-- Side nav -->
+					<div class="col">
+						<div class="btn-group">
+							<button
+								class="btn btn-secondary btn-sm dropdown-toggle"
+								type="button"
+								data-toggle="dropdown"
+								aria-haspopup="true"
+								aria-expanded="false"
+							>
+								Small button
+							</button>
+							<div class="dropdown-menu">
+								<a href="./htmlReminders/semantics.html"
+									>Semantics</a
+								>
+							</div>
+						</div>
+					</div>
+				</nav>
+			</div>
+		</div>
+		<div>Something</div>
+
+		<!-- Script -->
+		<script
+			src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+			integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js"
+			integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js"
+			integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+			crossorigin="anonymous"
+		></script>
 	</body>
 </html>
