extra reminder folders.

--- a/htmlReminders/semantics.html
+++ b/htmlReminders/semantics.html
@@ -7,6 +7,25 @@
 		<title>Document</title>
 	</head>
 	<body>
+		<nav class="navbar navbar-fixed" id="nav">
+			<!-- Side nav -->
+			<div class="col">
+				<div class="btn-group">
+					<button
+						class="btn btn-secondary btn-sm dropdown-toggle"
+						type="button"
+						data-toggle="dropdown"
+						aria-haspopup="true"
+						aria-expanded="false"
+					>
+						Small button
+					</button>
+					<div class="dropdown-menu">
+						<a href="htmlReminders\semantics.html">Semantics</a>
+					</div>
+				</div>
+			</div>
+		</nav>
 		<div>
 			<h1>Semantics</h1>
 			<p>Some semantic elements have default styling.</p>
